[gd_scene load_steps=4 format=3 uid="uid://c13mq0sude0h7"]

[ext_resource type="Texture2D" uid="uid://gr7fbfhye2c2" path="res://icon.svg" id="1_4ktum"]
[ext_resource type="Script" path="res://potion_scene/potions.gd" id="1_idpag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6biwa"]
size = Vector2(21, 19)

[node name="potions" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_idpag")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-0.333332, -3.8147e-06)
scale = Vector2(0.16575, 0.15)
texture = ExtResource("1_4ktum")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-15.6667, 16.3333)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(15.5, -16.5)
shape = SubResource("RectangleShape2D_6biwa")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
